--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "bcryptjs": "^2.4.3",
     "cookie-session": "^2.0.0",
     "ejs": "^3.1.8",
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "nodemon": "^2.0.20"
   },
   "devDependencies": {
     "chai": "^4.3.7",
